--- a/env.example
+++ b/env.example
@@ -4,11 +4,10 @@ WEBFLOW_API_TOKEN=your_webflow_api_token
 WEBFLOW_WORKSHOPS_COLLECTION_ID=your_workshops_collection_id
 WEBFLOW_WEBHOOK_SECRET=your_webhook_secret
 
-# Mailchimp Configuration
-MAILCHIMP_API_KEY=your_mailchimp_api_key
-MAILCHIMP_SERVER_PREFIX=us1
-MAILCHIMP_AUDIENCE_ID=your_audience_id
-MC_CAMPAIGN_ID=your_campaign_id
+# Resend Configuration
+RESEND_API_KEY=your_resend_api_key
+RESEND_FROM_EMAIL=workshops@yourdomain.com
+RESEND_TEMPLATE_ID=your_template_id
 
 # Environment
 NODE_ENV=development
