--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "echo 'No build step needed for serverless functions'",
     "deploy": "vercel --prod"
   },
-  "keywords": ["webflow", "mailchimp", "webhook", "email"],
+  "keywords": ["webflow", "resend", "webhook", "email"],
   "author": "Luis Palomares",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "vercel": "^32.0.0"
