--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
+  "version": 2,
   "functions": {
     "api/**/*.js": {
       "runtime": "nodejs18.x"
     }
-  },
-  "env": {
-    "NODE_ENV": "production"
   }
 }
