--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "echo 'No build step needed for serverless functions'",
     "deploy": "vercel --prod"
   },
-  "keywords": ["webflow", "resend", "webhook", "email"],
+  "keywords": [
+    "webflow",
+    "resend",
+    "webhook",
+    "email"
+  ],
   "author": "Luis Palomares",
   "license": "MIT",
   "dependencies": {
@@ -17,6 +22,9 @@
     "resend": "^3.2.0"
   },
   "devDependencies": {
-    "vercel": "^32.0.0"
+    "vercel": "^47.0.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
