--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.2",
     "resend": "^3.2.0"
   },
   "devDependencies": {
