fixed missing signature check on endpoint

--- a/env.example
+++ b/env.example
@@ -4,6 +4,9 @@ WEBFLOW_API_TOKEN=your_webflow_api_token
 WEBFLOW_WORKSHOPS_COLLECTION_ID=your_workshops_collection_id
 WEBFLOW_WEBHOOK_SECRET=your_webhook_secret
 
+# Security: Generate a strong random string for webhook verification
+# You can generate one with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+
 # Resend Configuration
 RESEND_API_KEY=your_resend_api_key
 RESEND_FROM_EMAIL=workshops@yourdomain.com
