testing new signature + end to end

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@ WEBFLOW_WEBHOOK_SECRET=your_webhook_secret
 # Security: Generate a strong random string for webhook verification
 # You can generate one with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 
+# Debug Logging (set to 'true' for detailed logs during testing, 'false' for production)
+DEBUG_LOGGING=true
+
 # Resend Configuration
 RESEND_API_KEY=your_resend_api_key
 RESEND_FROM_EMAIL=workshops@yourdomain.com
